--- a/ModoCarreira/MCPage.xaml
+++ b/ModoCarreira/MCPage.xaml
@@ -15,23 +15,36 @@
       </Grid.RowDefinitions>
     
   <Frame 
-        BackgroundColor="#ffe291"
+        BackgroundColor="#ffe291" 
         CornerRadius="30"
         Margin="5,10,5,0"
         VerticalOptions="Fill"
         Grid.Row="0">
     
-    <Label 
-        Text="Oisabdbakdbsajkbdsbadjksbadbsjkabdksbadbsajdbsjkabdjlsabdjksabsjka"   
+    <Label   
         TextColor="Black"
         LineHeight="1.2"
         HorizontalOptions="Center"
         VerticalOptions="Start"
         FontSize="20"
         FontFamily="CaviarDreams_BoldItalic"/>
-
-
   </Frame>
+  <Button
+        Text="Próximo"
+        BackgroundColor="#ffe291"
+        BorderWidth="1.5"
+        BorderColor="Black"
+        Margin="10,5"
+        TextColor="Black"
+        FontSize="20"
+        HeightRequest="50"
+        CornerRadius="30"
+        HorizontalOptions="Fill"
+        Grid.Row="1"/>
+    
+
+
+
 
 
 
